--- a/templates/template.html
+++ b/templates/template.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Welcome, Friends!</title>
+    <title>Welcome, friends!</title>
 </head>
 <body>
-<!--below code shows HTML inheritance. This is extended to child template-->
-    <div>
-        {% block content %}
-        {% endblock %}
-    </div>
-</body>
+<div class="container">
+    {% for message in get_flashed_messages() %}
+    <div class="flash">{{ message }}</div>
+    {% endfor %}
+    {% if error %}
+    <p class="error"><strong>Error:</strong> {{ error }}</p>
+    {% endif %}      
+    <!-- inheritance -->      
+    {% block content %}      
+    {% endblock %}      
+    <!-- end inheritance -->    
+</div>  
+</body> 
 </html>
