--- a/templates/main.html
+++ b/templates/main.html
@@ -2,4 +2,41 @@
 {% block content %}
     <h2>Welcome to the Flask Blog!</h2>
     <p><a href="{{ url_for('logout') }}">Log out</a></p>
+    <h3>Add a new post:</h3>
+        <form action="{{ url_for('add') }}" method="post" class="add">
+            <div>
+                <label>Title:</label>
+                <input name="title" type="text">
+            </div>
+            <div>
+                <label>Post:</label>
+                <textarea name="post" rows="5" cols="40"></textarea>
+            </div>
+            <div class="">
+                <input class="button" type="submit" value="Save">
+            </div>
+        </form>
+    <h3>Delete posts:</h3>
+        <form action ="{{ url_for('delete') }}" method="post" class = "delete">
+            <div>
+                <label>Title:</label>
+                <input name="title" type="text">
+            </div>
+            <div class="">
+                <input class="button" type ="submit" value="Delete">
+            </div>
+        </form>
+    <br/>
+    <br/>
+    <!--<strong>Title:</strong>{{ posts }}<br/>-->
+    <h3>Posts:</h3>
+    {% for p in posts %}
+        {% for q in p %}
+            <strong>Title:</strong>{{ q.title }}<br/>
+            <strong>Post:</strong>{{ q.post }}<br/>
+            <!--<h6></h6>{{ q.title }}</br>-->
+            <!--<h6></h6>{{ p.post }}</br>-->
+            <br/>
+        {% endfor %}
+    {% endfor %}
 {% endblock %}
